solve arrows issue on firefox

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -104,7 +104,7 @@ div.buttons
 .buttons select
 	@include white-button-black-text
 	max-width: 260px
-	text-align: center
+	text-align: left
 	padding: 12px
 	font-size: 15px
 	// font-weight: 700
@@ -215,10 +215,9 @@ div.buttons
 .inputs .result svg
 	@include flex-grow(1)
 	text-align: center
-	padding: 5px 10px
+	padding: 5px
 	position: relative
 	top: 4px
-	left: -4px
 
 .widget
 	margin-top: 10px
